# tramcast

./: .gitignore  Cargo.toml  build.rs  diagram.json  wokwi.toml
.cargo/: config.toml
assets/: font_20x40.raw  font_40x80.raw  no_wifi.raw  tram.raw
src/: draw.rs  main.rs  mqtt.rs  simulated_mqtt.rs  state.rs
