[package]
name = "tramcast"
version = "0.1.0"
authors = ["akosnad <akos@nadudvari.org>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[package.metadata.espflash]
partition_table = "partitions.csv"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
  "esp-idf-svc/embassy-sync",
  "esp-idf-svc/critical-section",
  "esp-idf-svc/embassy-time-driver",
]
simulated = []

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
anyhow = "1.0.81"
serde = "1.0.197"
serde_json = "1.0.114"
chrono = { version = "0.4.35", features = ["serde"] }
humantime = "2.1.0"
esp-ota = "0.2.0"
chrono-tz = "0.9.0"

[build-dependencies]
anyhow = "1.0.81"
embuild = "0.31.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.33"
